# feishu-claude-app

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  test-image-send.sh  wdio.conf.ts
.claude/: TEAM_MEMORY.md  settings.local.json
.claude/agents/: SKILL.md  admin-commands-specialist.md  claude-cli-researcher.md  session-persistence-specialist.md  tauri-webdriver-specialist.md
.claude/docs/: fix-feishu-image-summary.md  fix-feishu-image-work-report.md
.claude/memory/: feishu-api-init-pattern.md  feishu-image-api.md  feishu-image-upload-api.md  fix-syntax-error.md  multipart-formdata-fix.md
.claude/skills/: SKILL.md  (+8 more)
docs/: TECHNICAL_GUIDE.md  TECH_REPORT_2026-02-22.md  admin-commands-progress.md  admin-commands-summary.md  agents-skills-inventory.md  feishu-message-forward.md  mcp-architecture.md  mcp-research.md  project-summary.md  release-mcp-fix-progress.md  session-feature-report.md  session-feature.md  session-persistence-fix.md  session-persistence-report.md  tauri-e2e-testing-guide.md  tauri-e2e-testing-report.md  test-plan-template.md  test-progress-template.md  test-result-template.md  ui-refactor-progress.md  work-session-report-2026-02-23.md
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/icons/: README.md
src-tauri/src/mcp/: client.rs  mod.rs  transport.rs  types.rs
tests/: admin-commands.test.ts  app.test.ts  feishu-api.unit.test.ts  image-message.test.ts  image-send.test.ts
(+26 files in other folders)
